--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "04_commerce_store_front",
+  "name": "inesis_app",
   "version": "1.0.0",
   "description": "",
   "main": ".eslintrc.js",
